fix login & sign up page layout to fit row, adjusted user profile to push profile to top on small screen

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -112,8 +112,8 @@ aside {
 
 input, textarea, select, .uneditable-input {
   border: 1px solid #bbb;
-  width: 100px;
-  padding: 10px;
+  width: 400px;
+  padding: 12px;
   margin-bottom: 15px;
   color: black;
   font-size: 17px;
@@ -133,6 +133,11 @@ input {
   font-family: "ff-clan-web-pro-wide", sans-serif;
 }
 
+.btn-success{
+  background-image: none;
+  width: 100px;
+  margin-left: 4px;
+ }
 #error_explanation {
   color: #f00;
   ul {
@@ -235,6 +240,11 @@ aside {
     margin-top: 20px;
     margin-bottom: 10px;
     z-index: 500;
+    text-decoration: none;
+  }
+
+.nav >li>a:hover{
+  color: blue !important;
   }
 
 #header .navbar-inner { 
@@ -253,10 +263,18 @@ aside {
 }
 
 /* Background */
-.content {
+#profile-content {
   color: #333;
   font-size: 1.2em;
-  line-height: 2.0;
+  line-height: 1.0;
+  margin-bottom: 1px;
+  padding-top: 150px;
+  padding-right: 40px;
+  overflow: hidden;
+  position: relative;
+  padding-bottom: 24px;
+  width: 100%;
+  z-index: 10;
 }
 
 .content > header {
@@ -492,3 +510,9 @@ aside {
   border-bottom:1px solid #ddd;
   padding: 0.8em;
 }
+
+.floatright{float:right;}
+@media (max-width: 768px)
+{    
+    .floatright{float:none;}
+}  
